<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter_name">Название</string>
    <string name="enter_dosage">Дозировка</string>
    <string name="enter_notes">Заметки</string>
    <string name="notification_repeat">Повтор</string>
    <string name="never">Никогда</string>
    <string name="daily">Ежедневно</string>
    <string name="weekly">Еженедельно</string>
    <string name="monthly">Ежемесячно</string>
    <string name="save">Сохранить</string>
    <string name="notifications">Напоминания</string>
    <string name="notification">Напоминание</string>
    <string name="setupTime">Установите время</string>
    <string name="course_start">Начало курса</string>
    <string name="course_end">Конец курса</string>
    <string name="courseDuration">Длительность курса</string>
    <string name="notificationEnabled">Напоминание активно</string>
    <string name="notificationEnabledDisclaimer">Напоминание можно временно выключить</string>
    <string name="pills">таблетки</string>
    <string name="ml">мл</string>
    <string name="delete">Удалить</string>
    <string name="doctor_update_notifications">Доктор обновил напоминания</string>
    <string name="rest_of_pills">Остатки препаратов</string>
    <string name="add_pill">Добавить препарат</string>
    <string name="edit_pill">Редактирование препарата</string>
    <string name="pill_name">Название препарата</string>
    <string name="inDayCount">Количество в сутки</string>
    <string name="currentRest">Текущий остаток</string>
</resources>