<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notificationDataContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/offset_medium"
    android:background="@drawable/edit_text_cyan_border_bg_12"
    android:orientation="vertical"
    android:paddingStart="@dimen/offset_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tabletName"
            style="@style/TextView.Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/enter_name"
            android:imeOptions="actionNext"
            android:maxLength="50"
            android:nextFocusDown="@id/tabletDosage"
            android:paddingVertical="@dimen/offset_small" />

        <TextView
            android:id="@+id/deleteItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/offset_medium"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/delete" />

    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cyan_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tabletDosage"
            style="@style/TextView.Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/offset_small"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:digits="0123456789"
            android:hint="@string/enter_dosage"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="50"
            android:nextFocusDown="@id/tabletNote"
            android:paddingVertical="@dimen/offset_small" />

        <RadioGroup
            android:id="@+id/dosage_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/offset_medium"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/offset_zero">

            <RadioButton
                android:id="@+id/dosagePill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/offset_small"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/pills" />

            <RadioButton
                android:id="@+id/dosageMl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/ml" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cyan_main" />

    <EditText
        android:id="@+id/tabletNote"
        style="@style/TextView.Subtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/offset_medium"
        android:background="@android:color/transparent"
        android:hint="@string/enter_notes"
        android:imeOptions="actionDone"
        android:maxLength="100"
        android:paddingVertical="@dimen/offset_small" />

</LinearLayout>